[gd_scene load_steps=20 format=3 uid="uid://ex4t3xl6envv"]

[ext_resource type="Script" uid="uid://1itaq2o6e6b7" path="res://Scripts/Utility/encyclopedia_tower_screen.gd" id="1_l0238"]
[ext_resource type="Texture2D" uid="uid://qxwsfkdg3cng" path="res://Assets/Sprites/Towers/Bolt Shooter/Idle/Bolt Shooter-Idle_0001.png" id="2_56vox"]
[ext_resource type="Texture2D" uid="uid://bwg7ovj3mk2sw" path="res://Assets/Sprites/UI/Menu/Menu Panel BIG.png" id="2_chmbl"]
[ext_resource type="Texture2D" uid="uid://d3jmyypyro3e" path="res://Assets/Sprites/UI/Menu/Small Menu Button Not Pressed.png" id="3_18xws"]
[ext_resource type="FontFile" uid="uid://s356y0v84w4" path="res://Assets/fonts/PixelOperator8.ttf" id="3_s63nn"]
[ext_resource type="Texture2D" uid="uid://dtol8cecgi2rj" path="res://Assets/Sprites/Towers/Jammer Cannon/Jammer Cannon.png" id="4_ahmee"]
[ext_resource type="Texture2D" uid="uid://nbgmdxp2swct" path="res://Assets/Sprites/UI/Menu/Small Menu Button Pressed.png" id="4_nrdxa"]
[ext_resource type="FontFile" uid="uid://8qixsdylbpdo" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="5_18xws"]
[ext_resource type="Texture2D" uid="uid://c68y4m0qm3fgc" path="res://Assets/Sprites/Towers/Delivery Drone/Delivery Drone Fly-00.png" id="5_g5eb7"]
[ext_resource type="Texture2D" uid="uid://xb8ppe6kmgur" path="res://Assets/Sprites/Towers/HKCM/Hot Kawaii Coffee Machine.png" id="5_o8leb"]
[ext_resource type="Texture2D" uid="uid://d2pnt3yato1t3" path="res://Assets/Sprites/Towers/Spaghetti Cable/Spaghetti Cable.png" id="6_g5eb7"]
[ext_resource type="Texture2D" uid="uid://do0c206p2416p" path="res://Assets/Sprites/UI/Menu/DB Button Not Pressed.png" id="7_18xws"]
[ext_resource type="Texture2D" uid="uid://38ixobosr16o" path="res://Assets/Sprites/Towers/Toilet Silo/Sturamissile Launcher.png" id="7_bvcsp"]
[ext_resource type="PackedScene" uid="uid://12p1be5lu4o4" path="res://Scenes/Utilities/colorscale_filter.tscn" id="7_v4lb0"]
[ext_resource type="Texture2D" uid="uid://bk5xlovlq1fgi" path="res://Assets/Sprites/UI/Menu/DB Button Pressed.png" id="8_nrdxa"]

[sub_resource type="FontVariation" id="FontVariation_nrdxa"]
base_font = ExtResource("5_18xws")
spacing_glyph = -1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h4x86"]
bg_color = Color(0.06666667, 0.09411765, 0.08235294, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.15, 0.13915001, 0.057, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_56vox"]

[sub_resource type="FontVariation" id="FontVariation_18xws"]
base_font = ExtResource("3_s63nn")
spacing_glyph = -2

[node name="Towers" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_l0238")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_chmbl")
metadata/_edit_lock_ = true

[node name="Back" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 905.0
offset_right = 846.0
offset_bottom = 1005.0
texture_normal = ExtResource("3_18xws")
texture_pressed = ExtResource("4_nrdxa")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Back"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9019608, 0.9019608, 0.9019608, 1)
theme_override_fonts/font = SubResource("FontVariation_nrdxa")
theme_override_font_sizes/font_size = 40
text = "back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Testo" type="Label" parent="."]
layout_mode = 0
offset_left = 220.0
offset_top = 60.0
offset_right = 840.0
offset_bottom = 170.0
theme_override_colors/font_color = Color(0.9019608, 0.9019608, 0.9019608, 1)
theme_override_fonts/font = ExtResource("5_18xws")
theme_override_font_sizes/font_size = 80
text = "towers"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeliveryDrone" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 221.0
offset_right = 356.0
offset_bottom = 541.0
focus_mode = 0
texture_normal = ExtResource("7_18xws")
texture_pressed = ExtResource("8_nrdxa")
stretch_mode = 5
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="DeliveryDrone"]
texture_filter = 1
layout_mode = 0
offset_left = 33.0
offset_top = 36.0
offset_right = 289.0
offset_bottom = 292.0
texture = ExtResource("5_g5eb7")

[node name="BoltShooter" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 371.0
offset_top = 221.0
offset_right = 691.0
offset_bottom = 541.0
focus_mode = 0
texture_normal = ExtResource("7_18xws")
texture_pressed = ExtResource("8_nrdxa")
stretch_mode = 0
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="BoltShooter"]
texture_filter = 1
layout_mode = 0
offset_left = 37.0
offset_top = 31.0
offset_right = 293.0
offset_bottom = 287.0
texture = ExtResource("2_56vox")
stretch_mode = 5

[node name="Jammer" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 706.0
offset_top = 221.0
offset_right = 1026.0
offset_bottom = 541.0
focus_mode = 0
texture_normal = ExtResource("7_18xws")
texture_pressed = ExtResource("8_nrdxa")
stretch_mode = 5
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="Jammer"]
texture_filter = 1
layout_mode = 0
offset_left = 35.0
offset_top = 25.0
offset_right = 291.0
offset_bottom = 281.0
texture = ExtResource("4_ahmee")

[node name="HKCM" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 556.0
offset_right = 356.0
offset_bottom = 876.0
focus_mode = 0
texture_normal = ExtResource("7_18xws")
texture_pressed = ExtResource("8_nrdxa")
stretch_mode = 5
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="HKCM"]
texture_filter = 1
layout_mode = 0
offset_left = 31.0
offset_top = 9.0
offset_right = 287.0
offset_bottom = 265.0
texture = ExtResource("5_o8leb")

[node name="SpaghettiCable" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 371.0
offset_top = 556.0
offset_right = 691.0
offset_bottom = 876.0
focus_mode = 0
texture_normal = ExtResource("7_18xws")
texture_pressed = ExtResource("8_nrdxa")
stretch_mode = 5
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="SpaghettiCable"]
texture_filter = 1
layout_mode = 0
offset_left = 34.0
offset_top = 37.0
offset_right = 290.0
offset_bottom = 293.0
texture = ExtResource("6_g5eb7")

[node name="ToiletSilo" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 706.0
offset_top = 556.0
offset_right = 1026.0
offset_bottom = 876.0
focus_mode = 0
texture_normal = ExtResource("7_18xws")
texture_pressed = ExtResource("8_nrdxa")
stretch_mode = 5
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="ToiletSilo"]
texture_filter = 1
layout_mode = 0
offset_left = 36.0
offset_top = 31.0
offset_right = 292.0
offset_bottom = 287.0
texture = ExtResource("7_bvcsp")

[node name="RiquadroTorrette" type="Panel" parent="."]
layout_mode = 0
offset_left = 1038.0
offset_top = 74.0
offset_right = 1881.0
offset_bottom = 1006.0
theme_override_styles/panel = SubResource("StyleBoxFlat_h4x86")

[node name="TowerDescriptionPanel" type="Panel" parent="RiquadroTorrette"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_56vox")

[node name="TowerName" type="Label" parent="RiquadroTorrette/TowerDescriptionPanel"]
layout_mode = 0
offset_left = 23.0
offset_top = 23.0
offset_right = 820.0
offset_bottom = 78.0
theme_override_colors/font_color = Color(0.9019608, 0.9019608, 0.9019608, 1)
theme_override_fonts/font = ExtResource("5_18xws")
theme_override_font_sizes/font_size = 40
text = "Lorem Ipsum Dixe Dixit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TowerDescription" type="Label" parent="RiquadroTorrette/TowerDescriptionPanel"]
layout_mode = 0
offset_left = 23.0
offset_top = 91.0
offset_right = 820.0
offset_bottom = 1108.0
theme_override_colors/font_color = Color(0.9019608, 0.9019608, 0.9019608, 1)
theme_override_constants/line_spacing = 8
theme_override_fonts/font = SubResource("FontVariation_18xws")
theme_override_font_sizes/font_size = 40
text = "Gallia est omnis divisa in partes tres, quarum unam incolunt Belgae, aliam Aquitani, tertiam qui ipsorum lingua Celtae, nostra Galli appellantur. Hi omnes lingua, institutis, legibus inter se differunt. Gallos ab Aquitanis Garumna flumen, a Belgis Matrona et Sequana dividit. Horum omnium fortissimi sunt Belgae, propterea quod a cultu atque humanitate provinciae longissime absunt, minimeque ad eos mercatores saepe commeant atque ea quae ad effeminandos animos pertinent important,"
autowrap_mode = 3

[node name="Colorscale Filter" parent="." instance=ExtResource("7_v4lb0")]

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="DeliveryDrone" to="." method="_on_delivery_drone_pressed"]
[connection signal="pressed" from="BoltShooter" to="." method="_on_bolt_shooter_pressed"]
[connection signal="pressed" from="Jammer" to="." method="_on_jammer_pressed"]
[connection signal="pressed" from="HKCM" to="." method="_on_hkcm_pressed"]
[connection signal="pressed" from="SpaghettiCable" to="." method="_on_spaghetti_cable_pressed"]
[connection signal="pressed" from="ToiletSilo" to="." method="_on_toilet_silo_pressed"]
